######### 2014-6-27 ##########
alter table shop_weixin_account add column pay_sign_key ;
alter table shop_users_user change column type type varchar(8) NOT NULL;
######### 2014-6-22 ##########
alter table shop_fenxiao_purchaseorder change distributor_payment distributor_payment double NOT NULL;
alter table shop_fenxiao_purchaseorder change post_fee post_fee double NOT NULL;
alter table shop_fenxiao_purchaseorder change total_fee total_fee double NOT NULL;
alter table shop_fenxiao_subpurchaseorder change total_fee total_fee double NOT NULL;
alter table shop_fenxiao_subpurchaseorder change distributor_payment distributor_payment double NOT NULL;
alter table shop_fenxiao_subpurchaseorder change buyer_payment buyer_payment double NOT NULL;
alter table shop_fenxiao_subpurchaseorder change refund_fee refund_fee double NOT NULL;
alter table shop_fenxiao_subpurchaseorder change auction_price auction_price double NOT NULL;
alter table shop_fenxiao_subpurchaseorder change price price double NOT NULL;
######### 2014-6-21 ##########
alter table shop_trades_mergetrade change payment payment double NOT NULL;
alter table shop_trades_mergetrade change discount_fee discount_fee double NOT NULL;
alter table shop_trades_mergetrade change adjust_fee adjust_fee double NOT NULL;
alter table shop_trades_mergetrade change post_fee post_fee double NOT NULL;
alter table shop_trades_mergetrade change total_fee total_fee double NOT NULL;
alter table shop_trades_mergetrade change seller_cod_fee seller_cod_fee double NOT NULL;
alter table shop_trades_mergetrade change buyer_cod_fee buyer_cod_fee double NOT NULL;
alter table shop_trades_mergetrade change cod_fee cod_fee double NOT NULL;
alter table shop_trades_mergetrade change post_cost post_cost double NOT NULL;

alter table shop_trades_mergeorder change total_fee total_fee double NOT NULL;
alter table shop_trades_mergeorder change discount_fee discount_fee double NOT NULL;