@@ -1,3 +1,7 @@
+######### 2014-7-1 ##########
+alter table shop_weixin_account add column pay_sign_key pay_sign_key varchar(128) NOT NULL;
+alter table shop_weixin_account add column partner_id varchar(32) NOT NULL;
+alter table shop_weixin_account add column partner_key varchar(128) NOT NULL;
 ######### 2014-6-27 ##########
 alter table shop_weixin_account add column pay_sign_key ;
 alter table shop_users_user change column type type varchar(8) NOT NULL;
